# clink

./: .clang-format  .clang-tidy  .dockerignore  .gitignore  CHANGELOG.md  CITATION.cff  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  NOTICE  README.md  SECURITY.md  build_and_test.sh  docker-compose.yml  lsan-suppressions.txt  tsan-suppressions.txt  ubsan-suppressions.txt
benchmarks/: CMakeLists.txt  clink_async_scale_bench.cpp  clink_async_state_bench.cpp  clink_bench.cpp  clink_columnar_groupby_bench.cpp  clink_disagg_bench.cpp  clink_mfast_bench.cpp  clink_nexmark_bench.cpp  clink_serde_bench.cpp  density_envelope.py  embedded_footprint.py
benchmarks/failover_coldstart/: README.md
benchmarks/flink_compare/: .gitignore  README.md  docker-compose.yml  pipeline.md  run.sh
benchmarks/flink_compare/clink-job/: canonical_pipeline.cpp
benchmarks/flink_compare/driver/: consumer.py  producer.py  score.py
benchmarks/flink_compare/flink-job/: pom.xml
benchmarks/inproc_compare/: pipeline.md  run.sh
benchmarks/inproc_compare/clink-job/: inproc_pipeline.cpp
benchmarks/inproc_compare/flink-job/: pom.xml
benchmarks/m_fast/: README.md
benchmarks/nexmark/: README.md
benchmarks/nexmark_compare/: .gitignore  README.md  docker-compose.yml  latency.sh  nexmark_dump.cpp  pipeline.md  run.sh  throughput_containers.sh  throughput_sampled.sh  verify_distributed.sh
benchmarks/nexmark_compare/driver/: count_topic.py  cpu.py  latency_scoreboard.py  load_ndjson.py  measure_latency.py  measure_steady.py  pace_ndjson.py  sample_rate.py  scoreboard.py  summarize_sampled.py
benchmarks/nexmark_compare/flink-job/: pom.xml
benchmarks/prod_compare/: README.md  run_all.sh
benchmarks/prod_compare/interval_join/: README.md  run.sh
benchmarks/prod_compare/parallel_recovery/: README.md  run.sh
benchmarks/prod_compare/process_function/: README.md  run.sh
benchmarks/prod_compare/sliding_window/: README.md  run.sh
docs/consumer-examples/: 01_hello_pipeline.cpp  02_event_time_tumbling.cpp  03_sliding_window_aggregate.cpp  04_keyed_process_state.cpp  05_interval_join.cpp  06_file_io.cpp  07_parquet_io.cpp  08_cluster_job_plugin.cpp  09_testing_framework.cpp  CMakeLists.txt  README.md
docs/consumer-examples/state_as_data/: README.md  analyze.py  run.sh
examples/: CMakeLists.txt  bench_pipeline_job.cpp  cancel_test_job.cpp  canonical_pipeline_job.cpp  clickstream_join.cpp  collision_job_a.cpp  collision_job_b.cpp  event_time_tumbling.cpp  file_word_count.cpp  heavy_pipeline_job.cpp  k8s_smoke_job.cpp  rescale_test_job.cpp  schema_evo_test_job.cpp  two_phase_commit_job.cpp  word_count.cpp
impls/: CMakeLists.txt
impls/avro/: CMakeLists.txt
impls/avro/src/: register_factories.cpp
impls/avro/tests/: CMakeLists.txt  register.cpp  test_codec.cpp
impls/aws/: CMakeLists.txt
impls/azure/: CMakeLists.txt
impls/cassandra/: CMakeLists.txt
impls/clickhouse/: CMakeLists.txt
impls/etcd/: CMakeLists.txt
impls/forst/: CMakeLists.txt
impls/forst-s3/: CMakeLists.txt
impls/gcs/: CMakeLists.txt
impls/http_connector/: CMakeLists.txt
impls/iceberg/: CMakeLists.txt
impls/kafka/: CMakeLists.txt
impls/mongodb/: CMakeLists.txt
impls/mqtt/: CMakeLists.txt
impls/mysql/: CMakeLists.txt
impls/nats/: CMakeLists.txt
impls/onnx/: CMakeLists.txt
impls/postgres/: CMakeLists.txt
impls/pulsar/: CMakeLists.txt
impls/rabbitmq/: CMakeLists.txt
impls/redis/: CMakeLists.txt
impls/rocksdb/: CMakeLists.txt
impls/rocksdb-s3/: CMakeLists.txt
impls/s3/: CMakeLists.txt
impls/tls/: CMakeLists.txt
impls/vector_search/: CMakeLists.txt
impls/wasm/: CMakeLists.txt
impls/webhdfs/: CMakeLists.txt
python/: README.md  pyproject.toml  setup.py
python/pyclink/: __init__.py
python/tests/: test_pyclink.py  wheel_smoke.py
tests/: CMakeLists.txt  test_arrow_batcher.cpp  test_arrow_fs_uri.cpp  test_async_co_process_function.cpp  test_async_execution_controller.cpp  test_async_function_registry.cpp  test_async_keyed_process_function.cpp  test_async_lookup_operator.cpp  test_async_map_operator.cpp  test_async_metrics.cpp  test_async_operator_runner.cpp  test_async_pool_primitives.cpp  test_async_session_window_operator.cpp  test_async_sliding_window_operator.cpp  test_async_state_get.cpp  test_async_task.cpp  test_async_tumbling_window_operator.cpp  test_autoscaler.cpp  test_batch_bootstrap.cpp  test_batch_bounded_execution.cpp  test_batch_scheduler.cpp  test_blocking_exchange.cpp  test_bounded_channel.cpp  test_broadcast_state.cpp  test_cep.cpp  test_changelog_state_backend.cpp  test_check_savepoint_cli.cpp  test_checkpoint_barrier.cpp  test_checkpoint_metrics.cpp  test_checkpoint_retention.cpp  test_clink_c_abi.cpp  test_clink_c_smoke.c  test_cluster.cpp  test_co_operator_unaligned.cpp  test_coalescing_backend.cpp  test_codec.cpp  test_column_lineage.cpp  test_columnar_batcher.cpp  test_columnar_expr_program.cpp  test_columnar_filter.cpp  (+161 more)
tests/integration/: bench_failover_coldstart.cpp  docker_postgres.hpp  test_application_mode.cpp  test_application_mode_e2e.cpp  test_cancel_job_e2e.cpp  test_cluster_tls.cpp  test_coordinator_ha_failover.cpp  test_coordinator_rescale.cpp  test_cross_process_bench.cpp  test_gateway_parity.cpp  test_gateway_pipeline.cpp  test_heavy_pipeline_e2e.cpp  test_http_dashboard.cpp  test_http_federation.cpp  test_http_health.cpp  test_http_observability.cpp  test_http_read_api.cpp  test_http_sse.cpp  test_http_submit.cpp  test_jm_ha_failover.cpp  test_jm_rescale.cpp  test_job_bundle_isolation.cpp  test_job_plugin_e2e.cpp  test_list_jobs.cpp  test_multiprocess_cluster.cpp  test_plugin_submission.cpp  test_postgres_cdc.cpp  test_postgres_cdc_pgoutput.cpp  test_postgres_pipeline.cpp  test_postgres_sink.cpp  test_schema_evo_check.cpp  test_sigterm_shutdown.cpp  test_stream_env_end_to_end.cpp  test_tm_crash_recovery.cpp  test_two_phase_commit.cpp  test_worker_crash_recovery.cpp
tests/plugin_examples/: gateway_plugin.cpp  hello_plugin.cpp
tests/test_helpers/: register_linked_impls.cpp  s3_finalizing_gtest_main.cpp  sanitizer_slack.hpp
(+894 files in other folders)
